# ai-trade-flow-platform

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  docker-compose.demo.yml  docker-compose.local.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/ai/: claude_client.py  signal_agent.py  signal_cache.py  strategy_agent.py  structured.py
backend/app/api/: ai.py  backtest.py  deps.py  ledger.py  markets.py  notifications.py  orders.py  portfolio.py  risk.py  schedules.py  strategies.py  workflows.py
backend/app/backtest/: engine.py  honesty.py  metrics.py  optimize.py  portfolio.py  validation.py  workflow_backtest.py
backend/app/brokers/: base.py  crypto_ccxt.py  csv_data.py  firstrade.py  market_data.py  paper.py  registry.py  yuanta.py
backend/app/marketdata/: __init__.py  calendar.py  fx.py
backend/app/notifications/: service.py
backend/app/scheduler/: service.py
backend/app/strategies/: base.py  bollinger.py  indicators.py  library.py  ma_cross.py  macd.py  registry.py  rsi.py  spec.py  spec_render.py
backend/app/tests/: conftest.py  helpers.py  test_ai_signal.py  test_auth.py  test_backtest.py  test_backtest_api.py  test_backtest_context.py  test_backtest_daterange.py  test_backtest_runs.py  test_calendar.py  test_compare_ranking.py  test_config_provider.py  test_costs.py  test_costs_default.py  test_honesty.py  test_indicators.py  test_ledger.py  test_ledger_base_currency.py  (+34 more)
backend/scripts/: gate_eval.py  smoke_local_llm.py
(+180 files in other folders)
