[project]
name = "ai-trade-flow-backend"
version = "0.1.0"
description = "AI-driven auto-trading platform backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlmodel>=0.0.16",
    "ccxt>=4.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "ta>=0.11",
    "anthropic>=0.40",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
